[tool.poetry]
name = "boxes-builds"
package-mode = false
version = "0.1.0"
description = "Record of boxes built with florianfesti's boxes"
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
boxes = {git = "https://github.com/florianfesti/boxes.git", rev = "d83609ef9f481337e4770dfbca92425cc61d7fe5"}
invoke = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
